# napari-stl-exporter

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
.napari/: config.yml
data/: Cylinder.tif  Pyramid.tif  Pyramid_compressed.tif  pyramid.stl  test.ply
doc/: Pyramid.stl
napari_stl_exporter/: __init__.py  _image_to_surface.py  _test_data.py  _writer.py  func.py  napari.yaml
napari_stl_exporter/_tests/: test_dock_widget.py  test_writer.py
sample_data/: Pyramid.tif
src/napari_stl_exporter/: __init__.py  _image_to_surface.py  _reader.py  _sample_data.py  _test_data.py  _writer.py  napari.yaml
src/napari_stl_exporter/_tests/: test_writer.py  test_writer_and_readers.py
src/napari_stl_exporter/sample_data/: Pyramid.tif
