[metadata]
name = napari-stl-exporter
version = 0.0.11
author = Johannes Müller
author_email = johannes_richard.mueller@tu-dresden.de
license = BSD-3-Clause
description = Exports label images to 3D-printable stl files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jo-mueller/napari-stl-exporter.git
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
# add your package requirements here
install_requires =
    napari
    napari-plugin-engine>=0.1.4
    numpy
    scikit-image
    vedo
    npe2


include_package_data = True

[options.packages.find]
where = src

[options.package_data]
napari-stl-exporter =
    napari.yaml

[options.entry_points]
napari.manifest =
    napari-stl-exporter = napari_stl_exporter:napari.yaml
